--- a/lumen/public/client/css/valgorama.css
+++ b/lumen/public/client/css/valgorama.css
@@ -123,3 +123,62 @@
   cursor: pointer;
   float: left;
 }
+
+.resultScreen {
+  width: 100%;
+  height: 100%;
+}
+
+.resultInfo {
+  width: 100%;
+  height: 150px;
+  padding-left: 16px;
+}
+
+.resultInfo > img {
+  height: 150px;
+  width: 150px;
+  float: left;
+}
+
+.resultInfo > p {
+  padding-top: 24px;
+  padding-left: 16px;
+  float: left;
+  width: 350px;
+  font-size: 20px;
+}
+
+.resultGraph {
+  width: 100%;
+  height: 200px;
+  margin-top: 16px;
+  padding-left: 32px;
+}
+
+.result {
+  width: 64px;
+  height: 200px;
+  float: left;
+  position: relative;
+}
+
+.result > .resultBlock {
+  position: absolute;
+  bottom: 60px;
+  left: 16px;
+  width: 32px;
+  background-color: #999;
+  text-align: center;
+  line-height: 30px;
+  color: #ffffff;
+}
+
+.result > img {
+  border-top: 1px solid #999;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  left: 7px;
+  bottom: 10px;
+}
