--- a/lumen/public/client/css/valgorama.css
+++ b/lumen/public/client/css/valgorama.css
@@ -20,13 +20,91 @@
   background-color: #D60000;
   color: #ffffff;
   line-height: 32px;
+  padding-left: 16px;
 }
 
 .categoryCount {
-  margin-left: 16px;
+
 }
 
 .categoryName {
+
+}
+
+.infoScreen {
+  padding: 32px;
+  height: 400px;
+}
+
+.infoScreen > .leftContainer {
+  width: 350px;
+  height: 150px;
+  float: left;
+}
+
+.infoScreen > .rightContainer {
+  padding-top: 54px;
+  height: 150px;
+  width: 270px;
+  padding-left: 16px;
+  float: left;
+  text-align: right;
+}
+
+.infoScreen > .leftContainer > h2 {
+  color: #D60000;
+  margin-bottom: 0px;
+}
+
+.infoScreen > .leftContainer > h3 {
+  margin-top: 0px;
+}
+
+.infoScreen > .leftContainer > h4 {
+  font-weight: 200;
+}
+
+.infoScreen > p {
+
+}
+
+.genderQuestion {
+  float: left;
+  width: 100%;
+  height: 150px;
+}
+
+.gender {
+  width: 100px;
+  height: 150px;
+  float: left;
+  margin: 4px 26px;
+  cursor: pointer;
+}
+
+.gender > img {
+
+}
+
+.gender > p {
+  text-align: center;
+  margin-top: 4px;
+}
+
+
+.bulletpointQuestion {
+  padding-top: 16px;
+  width: 300px;
+  margin: auto;
+}
+
+.bulletpointQuestion .questionName {
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
+}
+
+.bulletpointQuestion > .alternatives {
 
 }
 
@@ -37,20 +115,10 @@
   border-radius: 3px;
   background-color: #D60000;
   line-height: 24px;
-  margin: 4px;
+  margin: 4px auto;
   text-align: center;
   color: #ffffff;
-}
-
-.bulletpointQuestion {
-  padding-top: 16px;
-  width: 200px;
-  margin: auto;
-}
-
-.bulletpointQuestion .questionName {
-  font-weight: 400;
-  text-align: center;
+  font-size: 14px;
 }
 
 .politicalStatement {
