--- a/lumen/public/client/css/valgorama.css
+++ b/lumen/public/client/css/valgorama.css
@@ -4,7 +4,6 @@
 
 .valgoramaContainer {
   margin: auto;
-  margin-top: 20px;
   width: 700px;
   height: 400px;
   border: 1px solid red;
@@ -235,7 +234,6 @@
   position: absolute;
   bottom: 60px;
   left: 16px;
-  width: 32px;
   background-color: #999;
   text-align: center;
   line-height: 30px;
@@ -249,4 +247,180 @@
   height: 50px;
   left: 7px;
   bottom: 10px;
+}
+
+@media (min-width: 701px) {
+  .result > .resultBlock {
+    width: 32px !important;
+  }
+}
+
+/* Responsive styles */
+@media (max-width: 700px) {
+  .valgoramaContainer {
+    border: none;
+    min-height: 500px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+  }
+
+  .infoScreen {
+    padding: 16px;
+    height: 100%;
+  }
+
+  .infoScreen > .leftContainer {
+    width: 100%;
+    height: 120px;
+    float: left;
+  }
+
+  .infoScreen > .rightContainer {
+    padding: 10px 0 0 0;
+    height: 100px;
+    width: 100%;
+    float: left;
+    text-align: left;
+  }
+
+  .genderQuestion {
+    width: 100%;
+    height: 100px;
+  }
+
+  .gender {
+    width: 75px;
+    height: 100px;
+    float: left;
+    margin: 4px 26px;
+    cursor: pointer;
+  }
+
+  .statementTitle > p {
+    text-align: center;
+    height: 150px;
+    padding: 8px;
+    margin-bottom: 0;
+    font-size: 20px;
+  }
+
+  .statementAnswerList {
+    width: 100%;
+    padding: 8px;
+  }
+
+  .statementAnswer {
+    margin: 4px 0;
+    width: 100%;
+    border: 1px solid #d60000;
+    height: 50px;
+    float: left;
+    opacity: 0.6;
+  }
+
+  .statementAnswer > img {
+    margin: 8px;
+    width: 34px;
+    height: 34px;
+    float: left;
+  }
+
+  .statementAnswerText {
+    text-align: center;
+    line-height: 50px;
+    float: left;
+  }
+
+
+  .importanceQuestion {
+    margin-top: 16px;
+    width: 100%;
+    height: 100px;
+    margin: auto;
+  }
+
+  .importanceTitle {
+    text-align: center;
+  }
+
+  .importanceAnswerList {
+    width: 100%;
+    padding: 8px;
+  }
+
+  .importanceAnswer {
+    background-color: #D60000;
+    border-radius: 3px;
+    width: 100%;
+    height: 32px;
+    line-height: 32px;
+    color: #ffffff;
+    margin: 4px 0;
+    text-align: center;
+    cursor: pointer;
+    float: left;
+  }
+
+  .resultInfo {
+    width: 100%;
+    height: 200px;
+    padding-left: 0px;
+  }
+
+  .resultInfo > img {
+    padding-top: 8px;
+    float: none;
+    height: 100px;
+    width: 100px;
+    margin: auto;
+    display: block;
+  }
+
+  .resultInfo > p {
+    float: none;
+    padding-top: 24px;
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .resultGraph {
+    width: 100%;
+    height: 100%;
+    margin-top: 0;
+    padding-left: 0;
+  }
+
+  .result {
+    width: 100%;
+    height: 50px;
+    float: none;
+    position: relative;
+  }
+
+  .result > .resultBlock {
+    position: absolute;
+    top: 0;
+    left: 50px;
+    width: 0;
+    height: 32px !important;
+    background-color: #999;
+    text-align: center;
+    line-height: 30px;
+    color: #ffffff;
+  }
+
+  .result > img {
+    border-top: none;
+    border-right: 1px solid #999;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 7px;
+    bottom: 10px;
+  }
+
+
+
 }
